Fixed infinite scroll and layout issues for the search page on smaller screens

--- a/client/p3/src/pages/SearchPage/style.css
+++ b/client/p3/src/pages/SearchPage/style.css
@@ -2,6 +2,7 @@
     background-color:#D9D9D9; 
     padding:10px; 
     width: 90%;
+    max-width: 90%;
     margin: auto;
     padding: 20px;
     max-height: 40rem;
@@ -9,11 +10,16 @@
 }
 
 .search-results-table{
-    display:grid; 
+    display:flex; 
     row-gap: 5rem;
-    grid-template-columns: repeat(5, auto); 
+    flex-wrap:wrap;
     margin-bottom: 4rem;
     min-height: 16rem;
+    justify-content:center;
+}
+
+.card-wrapper-search{
+    min-width: 20%;
 }
 
 .BTT-wrapper{
